# remote-sensing

./: README.md  pyproject.toml
remote_sensing/: __init__.py
remote_sensing/models/: architectures.py  dense_prediction.py  encoder_adapter.py  losses.py  positional_embeddings.py  vits.py
remote_sensing/tests/: architectures_test.py  losses_test.py  vits_test.py
remote_sensing/vertex_ai/: utils.py
remote_sensing/vertex_ai/notebooks/: model_garden_remote_sensing_deployment.ipynb  vlm_batch_prediction_example.ipynb
